# deep-vqa-framework

./: .gitignore  .markdownlint.json  .markdownlintignore  Makefile  README.md  pyproject.toml
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  ci-troubleshooting.md  feature_request.md
.github/workflows/: ci.yml
config/: GUIDE.md
config/models/: resnet_iqa.yaml  timeswin_vqa.yaml
deploy/: infer.py
docs/: GUIDE.md
frontend/: index.html
scripts/: archive_result.sh  optimize_env.sh  setup_env.sh  setup_links.sh
src/: main.py
src/core/: engine.py  evaluator.py  trainer.py
src/data/: GUIDE.md  data_eda.py  metadata_loader_factory.py  metadata_loaders.py  types.py
src/data/eda/: GUIDE.md  integrity.py  metrics_plotter.py  split.py  statistics.py
src/models/: iqavqa_net.py
src/utils/: GUIDE.md  config_loader.py  file_loader.py  logging_utils.py  path_manager.py
